Bug 98642 - [Qt][WK2] REGRESSION(r130629): It made touchadjustment/focusout-on-touch.html fail
Summary: [Qt][WK2] REGRESSION(r130629): It made touchadjustment/focusout-on-touch.html...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 420+
Hardware: All All
: P2 Normal
Assignee: Jocelyn Turcotte
URL:
Keywords: Qt, QtTriaged
Depends on: 98888
Blocks: 79666 98427
  Show dependency treegraph
 
Reported: 2012-10-08 05:01 PDT by Csaba Osztrogonác
Modified: 2012-10-10 05:27 PDT (History)
8 users (show)

See Also:


Attachments
Patch (7.18 KB, patch)
2012-10-09 03:55 PDT, Jocelyn Turcotte
kenneth: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2012-10-08 05:01:53 PDT
https://trac.webkit.org/changeset/130629 caused the following regression:

--- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/touchadjustment/focusout-on-touch-expected.txt
+++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/touchadjustment/focusout-on-touch-actual.txt
@@ -1,3 +1,3 @@
-ALERT: PASS!
+ALERT: FAILED, textInput is focused.
 You should see "ALERT: PASS!"
Comment 1 Csaba Osztrogonác 2012-10-08 05:51:35 PDT
I skipped it by r130635. Please unskip it with the proper fix.
Comment 2 Jocelyn Turcotte 2012-10-09 03:55:03 PDT
Created attachment 167727 [details]
Patch
Comment 3 Jocelyn Turcotte 2012-10-10 03:25:13 PDT
Committed r130879: <http://trac.webkit.org/changeset/130879>
Comment 4 Csaba Osztrogonác 2012-10-10 05:27:43 PDT
(In reply to comment #3)
> Committed r130879: <http://trac.webkit.org/changeset/130879>

It caused a regression (6 crashes!) https://bugs.webkit.org/show_bug.cgi?id=98888