[Qt][WK2] REGRESSION(r130629): It made touchadjustment/focusout-on-touch.html fai1 https://bugs.webkit.org/show_bug.cgi?id=98642

Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

There was an early return that would prevent gesture recognition if no PageViewportController
has been set on QtWebPageEventHandler. The gesture recognizer are also used to send
GestureEvents to WebCore which this layout test is using.

Make sure that the gesture recognition is done even when no PageViewportController is present.

* UIProcess/qt/QtWebPageEventHandler.cpp:
(WebKit::QtWebPageEventHandler::handleInputEvent):
(WebKit::QtWebPageEventHandler::doneWithTouchEvent):

LayoutTests:

* platform/qt-5.0-wk2/TestExpectations: Unskip focusout-on-touch.html

Canonical link: https://commits.webkit.org/116857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130879 268f45cc-cd09-0410-ab3c-d52691b4dbfc